cluster/apps/monitoring/headlamp/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: monitoring
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "headlamp.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        # Network-level allow (RFC1918).
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-middleware-chain-internal-no-auth

      backendRefs:
        - name: headlamp
          port: 80
